syntax = "proto3";
option csharp_namespace = "ValidationServers.Address";

package address;

message ResultReply {
  bool result=1;
  string info=2;
}

message AuthenticationRequest {

}
message AuthenticationReply {
  ResultReply result = 1;
  uint64 id=2;
}

message ValidationAddressRequest {
  uint64 id=1;
  string data=2;
}
message ValidationAddressReply {
  ResultReply result = 1;
}

message DataRequest {
  uint64 id=1;
  bool connected=2;
  uint32 count=3;
}
message DataReply {
  ResultReply result = 1;
}

service ValidationAddress {
  rpc Authenticate(AuthenticationRequest) returns(AuthenticationReply);
  rpc ValidateAddress(ValidationAddressRequest) returns(ValidationAddressReply);
  rpc GetServerData(DataRequest) returns(DataReply);
}
